--- a/app/src/main/res/layout/activity_event_upload.xml
+++ b/app/src/main/res/layout/activity_event_upload.xml
@@ -25,6 +25,8 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:visibility="gone"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
