--- a/app/src/main/res/layout/activity_event_upload_event.xml
+++ b/app/src/main/res/layout/activity_event_upload_event.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/event_title"
+            android:backgroundTint="@color/colorAccent"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginTop="20dp"
@@ -40,6 +41,8 @@
             android:textSize="18sp"
             android:inputType="textMultiLine"
             android:gravity="top|start"
+            android:backgroundTint="@color/colorAccent"
+
             android:maxLines="10"
             android:lines="2"
             android:scrollbarStyle="outsideOverlay"
@@ -47,6 +50,7 @@
             android:id="@+id/ed_event_dep"/>
 
         <com.google.android.material.button.MaterialButton
+            android:visibility="gone"
             android:id="@+id/btn_event_takeImg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,6 +62,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_event_img"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="btnSelectImage"
@@ -72,6 +77,7 @@
             android:layout_height="wrap_content"
             android:onClick="btn_uploadEvents"
             android:text="@string/upload_event"
+            android:layout_marginTop="20dp"
             app:icon="@drawable/ic_file_upload_black_24dp"
             app:iconGravity="textStart" />
 
