--- a/app/src/main/res/layout/activity_grp_chat.xml
+++ b/app/src/main/res/layout/activity_grp_chat.xml
@@ -8,6 +8,7 @@
     tools:context=".grp_chat">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/lin_top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -19,12 +20,18 @@
             android:background="@color/colorPrimaryDark"
             android:minHeight="?attr/actionBarSize"
             android:onClick="open_class"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStartWithNavigation="0dp"
             app:titleTextColor="@color/white">
+
 
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/class_image"
                 android:layout_width="40dp"
+                app:civ_border_width="1dp"
                 android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 android:src="@mipmap/ic_pen_logo_round" />
 
             <TextView
@@ -34,7 +41,6 @@
                 android:layout_height="match_parent"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                android:text="@string/grpChats"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
         </com.google.android.material.appbar.MaterialToolbar>
@@ -44,17 +50,17 @@
             android:id="@+id/recycle_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
-            android:layout_below="@+id/toll_bar" />
+            android:layout_below="@+id/toll_bar"
+            android:layout_marginBottom="40dp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <RelativeLayout
         android:id="@+id/rel_msg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/btn_round"
         android:scrollbars="vertical"
-        android:layout_alignParentBottom="true"
         android:visibility="visible">
 
 
@@ -83,6 +89,7 @@
             android:layout_alignParentEnd="true"
             android:layout_margin="2dp"
             android:layout_marginEnd="10dp"
+            android:contentDescription="@string/gcm_defaultSenderId"
             android:onClick="btn_uploadMsg"
             android:src="@drawable/ic_send_black_24dp" />
 
