--- a/app/src/main/res/layout/activity_userlogin.xml
+++ b/app/src/main/res/layout/activity_userlogin.xml
@@ -92,11 +92,14 @@
             tools:ignore="OnClick" />
 
         <ProgressBar
+            android:visibility="invisible"
             android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:progressTint="@color/colorAccent" />
+            android:indeterminate="true"
+            android:focusable="true"
+            />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
