--- a/app/src/main/res/layout/grp_rec_item.xml
+++ b/app/src/main/res/layout/grp_rec_item.xml
@@ -11,30 +11,31 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="130dp"
+        android:layout_marginEnd="100dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/btn_round"
-        android:clickable="true"
-        android:focusable="true"
-        app:cardElevation="1dp"
         app:cardUseCompatPadding="true"
+        app:cardElevation="0dp"
+        app:cardBackgroundColor="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingStart="10dp"
+            android:background="@drawable/msg_rec"
             android:paddingEnd="10dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
+                    android:textDirection="ltr"
                     android:id="@+id/r_name"
+                    android:textColor="#000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
@@ -42,23 +43,19 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
                 <TextView
+                    android:textDirection="ltr"
                     android:id="@+id/r_msg"
+                    android:textColor="#000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/addComment"
                     android:textSize="16sp" />
 
                 <TextView
+                    android:textDirection="ltr"
                     android:id="@+id/r_date"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:text="@string/date"
