--- a/app/src/main/res/layout/grp_send_item.xml
+++ b/app/src/main/res/layout/grp_send_item.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/grp_send_card"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="1dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="5dp"
         android:clickable="true"
         android:focusable="true"
-        app:cardElevation="1dp"
+        app:cardBackgroundColor="@android:color/transparent"
+        app:cardElevation="0dp"
         app:cardUseCompatPadding="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:background="@drawable/btn_round"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:background="@drawable/msg_send"
             android:orientation="vertical"
             android:paddingStart="10dp"
             android:paddingEnd="10dp">
@@ -33,41 +34,38 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
-                    android:textDirection="anyRtl"
+                    android:visibility="gone"
                     android:id="@+id/s_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
+                    android:textColor="#000"
                     android:text="@string/app_name"
+                    android:textDirection="anyRtl"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="end"
-                android:orientation="vertical">
-
                 <TextView
-                    android:textDirection="anyRtl"
                     android:id="@+id/s_msg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:textColor="#000"
                     android:text="@string/addComment"
+                    android:textDirection="anyRtl"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:textDirection="anyRtl"
                     android:id="@+id/s_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="end"
                     android:maxLines="1"
                     android:text="@string/date"
+                    android:textDirection="anyRtl"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
